--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@ body {
     justify-content: center;
     align-items: center;
     background: rgba(255, 255, 255, 0.1);
-    color: Red;
+    color: gray;
     line-height: 1;
     margin-right: 50px;
     border-radius: 50%;
@@ -195,7 +195,7 @@ body {
   .nav-menu a {
     display: block;
     position: relative;
-    color: red;
+    color: gray;
     font-weight: bold;
     font-size: 20px;
     font-family: "Poppins", sans-serif;
@@ -221,7 +221,7 @@ body {
   }
   
   .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-    color: red;
+    color: white;
     text-decoration: none;
     font-weight:bold;
   }
